     a formatted explanation of its best / worst movement / defense properties.
   * Added automatic help entries for all eras, fulfilling Feature Request #22107
   * Fixed in-game help descriptions of default factions, using content from wiki
   * Added automatically generated lists of races and alignments to the descriptions of factions
   * Autogenerated Time of Day Schedule section
 * Language and i18n:
   * Updated translations: Czech, French, Galician, German, Greek, Hungarian,
     Italian, Lithuanian, Portuguese, Russian, Scottish Gaelic, Slovak, Spanish,
     Vietnamese
 * Lua API:
   * Upgraded Lua to version 5.2.3.
   * Fix bug #21761: wesnoth.synchronize_choice will now give a warning when
     the table returned by the user-specified function is not completely valid,
     when wesnoth is running in debug mode (--debug command line flag).
   * Added new function wesnoth.get_all_vars().
   * Add (tentative, preliminary) support for lua scripting of wesnoth application functions
   * Enable ilua "strict mode" by default. This safety feature helps to catch errors caused by mistyped
     variable names, and improves the behavior of the lua interpreter console. See 1.13.0 RELEASE NOTES
     for more details.
   * Add multiplayer client scripting (join lobby, chat, host games, save games, reload games) and mp
     unit tests based on this
 * Multiplayer:
   * Fixed the Set Password option during game creation not having an effect
     due to a misplaced WML attribute in the client's command for the server
     (bug #23015).
 * Replays:
   * Added a button that allows playing a single move in replay mode.
 * Sound:
   * Fixed issues with slowed and poisoned sounds not always playing correctly.
 * Units:
   * Increased the experience requirement for the Rami from 32 to 39
   * Increased the experience requirement for the Saree from 56 to 64
   * Changed sound timings for Khalifate melee attacks
   * New chill tempest animation for Lich/Ancient Lich