@@ -44,6 +44,8 @@ Version 1.13.0-dev:
 
  * Help Browser:
    * Autogenerated Time of Day Schedule section
+   * Unit types that do not include any visible (hide_help=no) variations no
+     longer generate topic sections.
 
  * Language and i18n:
    * Updated translations: Czech, French, Galician, German, Greek, Hungarian,
