@@ -416,7 +416,7 @@ std::vector<topic> generate_weapon_special_topics(const bool sort_generated)
 					//add a link in the list of units having this special
 					std::string type_name = type.type_name();
 					//check for variations (walking corpse/soulless etc)
-					const std::string section_prefix = type.variations().empty() ? "" : "..";
+					const std::string section_prefix = type.show_variations_in_help() ? ".." : "";
 					std::string ref_id = section_prefix + unit_prefix + type.id();
 					//we put the translated name at the beginning of the hyperlink,
 					//so the automatic alphabetic sorting of std::set can use it
@@ -639,7 +639,7 @@ std::string make_unit_link(const std::string& type_id)
 		std::string name = type->type_name();
 		std::string ref_id;
 		if (description_type(*type) == FULL_DESCRIPTION) {
-			const std::string section_prefix = type->variations().empty() ? "" : "..";
+			const std::string section_prefix = type->show_variations_in_help() ? ".." : "";
 			ref_id = section_prefix + unit_prefix + type->id();
 		} else {
 			ref_id = unknown_unit_topic;
@@ -785,7 +785,7 @@ void generate_unit_sections(const config* /*help_cfg*/, section& sec, int level,
 		if (type.race_id() != race)
 			continue;
 
-		if (type.variations().empty())
+		if (!type.show_variations_in_help())
 			continue;
 
 		section base_unit;
@@ -830,7 +830,7 @@ std::vector<topic> generate_unit_topics(const bool sort_generated, const std::st
 			continue;
 
 		const std::string type_name = type.type_name();
-		const std::string real_prefix = type.variations().empty() ? "" : "..";
+		const std::string real_prefix = type.show_variations_in_help() ? ".." : "";
 		const std::string ref_id = hidden_symbol(type.hide_help()) + real_prefix + unit_prefix +  type.id();
 		topic unit_topic(type_name, ref_id, "");
 		unit_topic.text = new unit_topic_generator(type);
