@@ -121,6 +121,8 @@ Version 1.13.0-dev:
    * Fixed in-game help descriptions of default factions, using content from wiki
    * Added automatically generated lists of races and alignments to the descriptions of factions
    * Autogenerated Time of Day Schedule section
+   * Unit types that do not include any visible (hide_help=no) variations no
+     longer generate topic sections.
  * Language and i18n:
    * Updated translations: Czech, French, Galician, German, Greek, Hungarian,
      Italian, Lithuanian, Portuguese, Russian, Scottish Gaelic, Slovak, Spanish,
